--- a/src/foreman.css
+++ b/src/foreman.css
@@ -609,3 +609,29 @@ margin-top: -12%;
       width: 23px;
       height: 4vh;
       }
+
+      Select {
+        -webkit-appearance: button;
+        -moz-appearance: button;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -webkit-padding-end: 55px;
+        -moz-padding-end: 20px;
+        -webkit-padding-start: 2px;
+        -moz-padding-start: 2px;
+        background-color: rgb(237, 242, 242);
+        background-position: center right;
+        background-repeat: no-repeat;
+        border: none;
+        border-radius: 2px;
+        /* box-shadow: 0px 1px 3px rgb(0 0 0 / 10%); */
+        color: rgb(31, 30, 30);
+        font-size: inherit;
+        margin: 0;
+        overflow: hidden;
+        padding-top: 2px;
+        padding-bottom: 2px;
+        text-overflow: ellipsis;
+         white-space: nowrap;
+         
+    }
